--- a/src/napari_pixel_correction/napari.yaml
+++ b/src/napari_pixel_correction/napari.yaml
@@ -5,21 +5,24 @@ contributions:
     - id: napari-pixel-correction.get_reader
       python_name: napari_pixel_correction._reader:napari_get_reader
       title: Open data with Pixel correction
+
     - id: napari-pixel-correction.write_multiple
       python_name: napari_pixel_correction._writer:write_multiple
       title: Save multi-layer data with Pixel correction
+
     - id: napari-pixel-correction.write_single_image
       python_name: napari_pixel_correction._writer:write_single_image
       title: Save image data with Pixel correction
-    - id: napari-pixel-correction.make_qwidget
-      python_name: napari_pixel_correction._widget:ExampleQWidget
-      title: Make example QWidget
-    - id: napari-pixel-correction.make_magic_widget
-      python_name: napari_pixel_correction._widget:example_magic_widget
-      title: Make example magic widget
-    - id: napari-pixel-correction.make_func_widget
-      python_name: napari_pixel_correction._widget:example_function_widget
-      title: Make example function widget
+
+    - id: napari-pixel-correction.load
+      python_name: napari_pixel_correction._widget:process_function_load
+      title: Load image
+    - id: napari-pixel-correction.save_label
+      python_name: napari_pixel_correction._widget:save_modification
+      title: Save label
+    - id: napari-pixel-correction.save_as_zip
+      python_name: napari_pixel_correction._widget:save_as_zip
+      title: Save zip
   readers:
     - command: napari-pixel-correction.get_reader
       accepts_directories: false
@@ -32,10 +35,9 @@ contributions:
       layer_types: ['image']
       filename_extensions: ['.npy']
   widgets:
-    - command: napari-pixel-correction.make_qwidget
-      display_name: Example QWidget
-    - command: napari-pixel-correction.make_magic_widget
-      display_name: Example Magic Widget
-    - command: napari-pixel-correction.make_func_widget
-      autogenerate: true
-      display_name: Example Function Widget
+    - command: napari-pixel-correction.load
+      display_name: Load image
+    - command: napari-pixel-correction.save_label
+      display_name: Save label
+    - command: napari-pixel-correction.save_as_zip
+      display_name: Save zip
