--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = napari-pixel-correction
+name = napari-pixel-correct
 version = 0.0.1
 description = Plugin to correct manually pixel wrongly predicted on image by annotation
 long_description = file: README.md
