--- a/setup.cfg
+++ b/setup.cfg
@@ -63,6 +63,10 @@ testing =
 [options.package_data]
 napari-pixel-correction = napari.yaml
 
-[testpypi]
+[distutils]
+index-servers =
+    pypi
+
+[pypi]
 username = "hmetua"
 password = "Sousmarin13+"
