--- a/setup.cfg
+++ b/setup.cfg
@@ -34,7 +34,8 @@ install_requires =
     numpy
     magicgui
     qtpy
-    skimage
+    scikit-image
+    napari
 
 python_requires = >=3.8
 include_package_data = True
