--- a/setup.cfg
+++ b/setup.cfg
@@ -21,7 +21,8 @@ classifiers =
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
-    Topic :: Scientific/Engineering :: Image Processing
+    Topic :: Software Development :: Testing
+#    Topic :: Scientific/Engineering :: Image Processing
 project_urls =
     Bug Tracker = https://github.com/hereariim/napari-pixel-correction/issues
     Documentation = https://github.com/hereariim/napari-pixel-correction#README.md
@@ -64,9 +65,9 @@ testing =
 [options.package_data]
 napari-pixel-correction = napari.yaml
 
-[distutils]
-index-servers =
-    pypi
+# [distutils]
+# index-servers =
+#     pypi
 
 [pypi]
 username = "hmetua"
